--- a/www/ServiceManager/starter2.html
+++ b/www/ServiceManager/starter2.html
@@ -327,6 +327,7 @@
 		}
 		
 		resizeOrchestrator = function() {
+			//permite tener las columnas del div orchestrator con la misma altura
 			boxes = $('.thinborder');
 			maxHeight = Math.max.apply(
 				Math, boxes.map(function() {
