--- a/www/ServiceManager/django/demo/demo/plantillas/inicio.html
+++ b/www/ServiceManager/django/demo/demo/plantillas/inicio.html
@@ -1,32 +1,31 @@
-<!DOCTYPE html>
-<html lang=’es’>
-<head>
-<title>Lista de bebidas de ejemplo</title>
-<meta charset=’utf-8’>
-</head>
-<body>
+{% extends 'base.html' %}
 
-<header>
-	<nav>
-		<ul>
-			<li><a href='/'>Inicio</a></li>
-			<li><a href='/usuarios'>Usuarios registrados</a></li>
-			<li><a href='/recetas'>Recetas</a></li>
-			<li><a href='/sobre'>sobre</a></li>
-		</ul>
-	</nav>
-</header>
-<section>
-	<h1>Recetario ;)</h1>
-	<p>Actualmente tenemos registrados:</p>
+{% comment %} Aqui van comentarios {% endcomment %}
+
+{% block titulo %} Inicio {% endblock %}
+
+{% block style_css %}
+	.impar { background-color:#90EE90; }
+	.par { background-color:#5ACC5A; }
+{% endblock %}
+
+{% block encabezado %}
+	<h1>Recetario</h1>
+{% endblock %}
+
+{% block contenido %}
+	<p>
+		Actualmente tenemos registradas:
+		{% with total=recetas.count %}
+			{{total}} receta{{total|pluralize}}
+		{% endwith %}
+	</p>
 	<ul>
 		{% for dato in recetas %}
-		<li>{{dato.titulo}}</li>
+		<li class="{% cycle 'impar' 'par' %}">{{dato.titulo}}</li>
+		{% empty %}
+		<li>No hay recetas registradas aun.</li>
 		{% endfor %}
 	</ul>
-
-
-</section>
-
-</body>
-</html>
+	
+{% endblock %}
